--- a/tweety/HamburgerMenuController.xib
+++ b/tweety/HamburgerMenuController.xib
@@ -20,14 +20,21 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hpi-6F-JhT">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6oD-JF-BSs">
+                            <rect key="frame" x="8" y="35" width="80" height="80"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="80" id="Cwr-yr-rFy"/>
+                                <constraint firstAttribute="width" constant="80" id="JYW-ee-jno"/>
+                            </constraints>
+                        </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@handle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gTI-bw-T5W">
-                            <rect key="frame" x="96" y="62" width="51" height="17.5"/>
+                            <rect key="frame" x="96" y="62" width="51" height="18"/>
                             <fontDescription key="fontDescription" name="GillSans-Light" family="Gill Sans" pointSize="15"/>
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Real Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iNV-8h-Udd">
-                            <rect key="frame" x="96" y="35" width="89.5" height="23"/>
+                            <rect key="frame" x="96" y="35" width="90" height="23"/>
                             <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="20"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
@@ -39,13 +46,37 @@
                                 <constraint firstAttribute="height" constant="1" id="ksI-jG-6o9"/>
                             </constraints>
                         </view>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6oD-JF-BSs">
-                            <rect key="frame" x="8" y="35" width="80" height="80"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="80" id="Cwr-yr-rFy"/>
-                                <constraint firstAttribute="width" constant="80" id="JYW-ee-jno"/>
-                            </constraints>
-                        </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WEq-MG-5tE">
+                            <rect key="frame" x="13" y="148" width="120" height="30"/>
+                            <state key="normal" title="Home">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tik-qP-i4J">
+                            <rect key="frame" x="50" y="186" width="46" height="30"/>
+                            <state key="normal" title="Profile">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oTC-6a-MSo">
+                            <rect key="frame" x="50" y="229" width="51" height="30"/>
+                            <state key="normal" title="Logout">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RpI-eH-dqf">
+                            <rect key="frame" x="24" y="262" width="109" height="30"/>
+                            <state key="normal" title="Mentions">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="onMentions:" destination="-1" eventType="touchUpInside" id="hJQ-ZH-tns"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" red="0.10674063973924872" green="0.19779112680307648" blue="0.34363042091836737" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
