--- a/tweety/HamburgerMenuController.xib
+++ b/tweety/HamburgerMenuController.xib
@@ -28,33 +28,35 @@
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@handle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gTI-bw-T5W">
-                            <rect key="frame" x="96" y="62" width="51" height="17.5"/>
+                            <rect key="frame" x="96" y="62" width="51" height="18"/>
                             <fontDescription key="fontDescription" name="GillSans-Light" family="Gill Sans" pointSize="15"/>
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Real Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iNV-8h-Udd">
-                            <rect key="frame" x="96" y="35" width="89.5" height="23"/>
+                            <rect key="frame" x="96" y="35" width="90" height="23"/>
                             <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="20"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JyV-A0-hj6">
-                            <rect key="frame" x="4" y="131" width="305" height="1"/>
+                            <rect key="frame" x="10" y="135" width="300" height="1"/>
                             <color key="backgroundColor" red="0.19292934913291354" green="0.3007261660030115" blue="0.57559390943877553" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="ksI-jG-6o9"/>
                             </constraints>
                         </view>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WEq-MG-5tE">
-                            <rect key="frame" x="13" y="148" width="120" height="30"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WEq-MG-5tE">
+                            <rect key="frame" x="139" y="156" width="43" height="32"/>
+                            <fontDescription key="fontDescription" name="GillSans-Light" family="Gill Sans" pointSize="17"/>
                             <state key="normal" title="Home">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tik-qP-i4J">
-                            <rect key="frame" x="50" y="186" width="46" height="30"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tik-qP-i4J">
+                            <rect key="frame" x="138" y="208" width="44" height="32"/>
+                            <fontDescription key="fontDescription" name="GillSans-Light" family="Gill Sans" pointSize="17"/>
                             <state key="normal" title="Profile">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -63,15 +65,20 @@
                                 <action selector="onProfile:" destination="-1" eventType="touchUpInside" id="UpK-cf-qPU"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oTC-6a-MSo">
-                            <rect key="frame" x="50" y="229" width="51" height="30"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oTC-6a-MSo">
+                            <rect key="frame" x="136" y="312" width="48" height="32"/>
+                            <fontDescription key="fontDescription" name="GillSans-Light" family="Gill Sans" pointSize="17"/>
                             <state key="normal" title="Logout">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="onLogout:" destination="-1" eventType="touchUpInside" id="KD6-DA-dZ2"/>
+                            </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RpI-eH-dqf">
-                            <rect key="frame" x="24" y="262" width="109" height="30"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RpI-eH-dqf">
+                            <rect key="frame" x="129" y="260" width="62" height="32"/>
+                            <fontDescription key="fontDescription" name="GillSans-Light" family="Gill Sans" pointSize="17"/>
                             <state key="normal" title="Mentions">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -80,17 +87,35 @@
                                 <action selector="onMentions:" destination="-1" eventType="touchUpInside" id="hJQ-ZH-tns"/>
                             </connections>
                         </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7HR-u4-NPr">
+                            <rect key="frame" x="10" y="364" width="299" height="1"/>
+                            <color key="backgroundColor" red="0.14733325820000001" green="0.2773810659" blue="0.48742426659999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="feZ-PU-V9z"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" red="0.10674063973924872" green="0.19779112680307648" blue="0.34363042091836737" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstItem="oTC-6a-MSo" firstAttribute="top" secondItem="RpI-eH-dqf" secondAttribute="bottom" constant="20" id="0QC-mh-P5G"/>
+                        <constraint firstItem="tik-qP-i4J" firstAttribute="top" secondItem="WEq-MG-5tE" secondAttribute="bottom" constant="20" id="13g-bV-iOk"/>
                         <constraint firstItem="gTI-bw-T5W" firstAttribute="leading" secondItem="6oD-JF-BSs" secondAttribute="trailing" constant="8" id="48y-yc-mYM"/>
+                        <constraint firstItem="7HR-u4-NPr" firstAttribute="top" secondItem="oTC-6a-MSo" secondAttribute="bottom" constant="20" id="8tP-Y2-n7J"/>
                         <constraint firstItem="6oD-JF-BSs" firstAttribute="top" secondItem="hpi-6F-JhT" secondAttribute="top" constant="35" id="B2W-8T-f7W"/>
+                        <constraint firstAttribute="centerX" secondItem="oTC-6a-MSo" secondAttribute="centerX" id="Dfl-Ev-l6M"/>
+                        <constraint firstAttribute="centerX" secondItem="RpI-eH-dqf" secondAttribute="centerX" id="Gtp-aj-aX0"/>
+                        <constraint firstAttribute="centerX" secondItem="WEq-MG-5tE" secondAttribute="centerX" id="HoI-GK-3cO"/>
                         <constraint firstItem="iNV-8h-Udd" firstAttribute="top" secondItem="hpi-6F-JhT" secondAttribute="top" constant="35" id="KUw-sb-Dy6"/>
                         <constraint firstItem="6oD-JF-BSs" firstAttribute="leading" secondItem="hpi-6F-JhT" secondAttribute="leading" constant="8" id="LXD-2g-Glb"/>
+                        <constraint firstItem="WEq-MG-5tE" firstAttribute="top" secondItem="JyV-A0-hj6" secondAttribute="bottom" constant="20" id="Mma-CJ-Khw"/>
+                        <constraint firstAttribute="trailing" secondItem="7HR-u4-NPr" secondAttribute="trailing" constant="11" id="NL1-Vj-m0f"/>
+                        <constraint firstItem="RpI-eH-dqf" firstAttribute="top" secondItem="tik-qP-i4J" secondAttribute="bottom" constant="20" id="OR3-xq-VRJ"/>
                         <constraint firstItem="gTI-bw-T5W" firstAttribute="top" secondItem="iNV-8h-Udd" secondAttribute="bottom" constant="4" id="QrQ-kR-pv4"/>
-                        <constraint firstItem="JyV-A0-hj6" firstAttribute="top" secondItem="6oD-JF-BSs" secondAttribute="bottom" constant="16" id="SDX-fk-yfs"/>
-                        <constraint firstAttribute="trailing" secondItem="JyV-A0-hj6" secondAttribute="trailing" constant="11" id="d6v-yc-rWu"/>
-                        <constraint firstItem="JyV-A0-hj6" firstAttribute="leading" secondItem="hpi-6F-JhT" secondAttribute="leading" constant="4" id="vgH-v6-yfP"/>
+                        <constraint firstAttribute="centerX" secondItem="tik-qP-i4J" secondAttribute="centerX" id="RNp-im-AD3"/>
+                        <constraint firstItem="JyV-A0-hj6" firstAttribute="top" secondItem="6oD-JF-BSs" secondAttribute="bottom" constant="20" id="SDX-fk-yfs"/>
+                        <constraint firstItem="7HR-u4-NPr" firstAttribute="leading" secondItem="hpi-6F-JhT" secondAttribute="leading" constant="10" id="bO9-JX-ndC"/>
+                        <constraint firstAttribute="trailing" secondItem="JyV-A0-hj6" secondAttribute="trailing" constant="10" id="d6v-yc-rWu"/>
+                        <constraint firstItem="JyV-A0-hj6" firstAttribute="leading" secondItem="hpi-6F-JhT" secondAttribute="leading" constant="10" id="vgH-v6-yfP"/>
                         <constraint firstItem="iNV-8h-Udd" firstAttribute="leading" secondItem="6oD-JF-BSs" secondAttribute="trailing" constant="8" id="z4r-AL-csB"/>
                     </constraints>
                 </view>
