--- a/tweety/ProfileViewController.xib
+++ b/tweety/ProfileViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
@@ -7,8 +7,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileViewController">
             <connections>
                 <outlet property="bgImage" destination="3N0-oh-iRz" id="57e-AN-u58"/>
-                <outlet property="followersCount" destination="bDA-ie-hzu" id="mAz-qX-GNK"/>
-                <outlet property="followingCount" destination="3se-Gw-bhD" id="bIM-3X-e1v"/>
+                <outlet property="paginatedInfoView" destination="SgX-nG-NXY" id="M8W-Gu-hHo"/>
                 <outlet property="profileImage" destination="iIx-6U-iFb" id="nH8-5d-Lz9"/>
                 <outlet property="screenName" destination="2uk-P8-E9L" id="arP-eT-OO8"/>
                 <outlet property="tweetList" destination="Bs7-tf-YtH" id="UtP-4z-r4I"/>
@@ -21,71 +20,77 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="3N0-oh-iRz">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="iIx-6U-iFb">
-                    <rect key="frame" x="8" y="59" width="97" height="90"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                </imageView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Bs7-tf-YtH">
-                    <rect key="frame" x="0.0" y="210" width="320" height="340"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Bs7-tf-YtH">
+                    <rect key="frame" x="0.0" y="180" width="320" height="388"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="rbL-gS-hr8">
-                    <rect key="frame" x="113" y="93" width="103" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@screenName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2uk-P8-E9L">
-                    <rect key="frame" x="113" y="115" width="138" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <view contentMode="scaleToFill" id="OK8-UI-iue">
-                    <rect key="frame" x="0.0" y="162" width="320" height="48"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H5A-Ti-Rsi" userLabel="ProfileImageContainerView">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3se-Gw-bhD">
-                            <rect key="frame" x="19" y="8" width="29" height="21"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3N0-oh-iRz" userLabel="BgImage">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iIx-6U-iFb" userLabel="ProfileImg">
+                            <rect key="frame" x="20" y="50" width="60" height="60"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="60" id="7Wq-pV-njh"/>
+                                <constraint firstAttribute="height" constant="60" id="Eg3-7p-1Ld"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rbL-gS-hr8">
+                            <rect key="frame" x="85" y="70" width="49" height="23"/>
+                            <fontDescription key="fontDescription" name="GillSans-Light" family="Gill Sans" pointSize="20"/>
+                            <color key="textColor" red="0.92432637120000005" green="0.92432637120000005" blue="0.92432637120000005" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Following" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="aVj-PW-kXd">
-                            <rect key="frame" x="56" y="7" width="94" height="21"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bDA-ie-hzu">
-                            <rect key="frame" x="150" y="8" width="29" height="21"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Followers" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="sso-lP-maH">
-                            <rect key="frame" x="192" y="8" width="74" height="21"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@screenName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uk-P8-E9L">
+                            <rect key="frame" x="85" y="98" width="87" height="18"/>
+                            <fontDescription key="fontDescription" name="GillSans-Light" family="Gill Sans" pointSize="15"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.1067406397" green="0.19779112679999999" blue="0.34363042090000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstItem="rbL-gS-hr8" firstAttribute="top" secondItem="H5A-Ti-Rsi" secondAttribute="top" constant="70" id="30p-os-IH3"/>
+                        <constraint firstItem="iIx-6U-iFb" firstAttribute="top" secondItem="H5A-Ti-Rsi" secondAttribute="top" constant="50" id="9eX-Y0-XYv"/>
+                        <constraint firstItem="3N0-oh-iRz" firstAttribute="leading" secondItem="H5A-Ti-Rsi" secondAttribute="leading" id="B1E-Al-AoM"/>
+                        <constraint firstAttribute="height" constant="120" id="GHI-Tg-hOx"/>
+                        <constraint firstItem="3N0-oh-iRz" firstAttribute="top" secondItem="H5A-Ti-Rsi" secondAttribute="top" id="V4P-Fw-6cE"/>
+                        <constraint firstItem="rbL-gS-hr8" firstAttribute="leading" secondItem="iIx-6U-iFb" secondAttribute="trailing" constant="5" id="eag-Xs-3Gb"/>
+                        <constraint firstAttribute="trailing" secondItem="3N0-oh-iRz" secondAttribute="trailing" id="gzK-II-88D"/>
+                        <constraint firstItem="iIx-6U-iFb" firstAttribute="leading" secondItem="H5A-Ti-Rsi" secondAttribute="leading" constant="20" id="h35-oz-GTj"/>
+                        <constraint firstItem="2uk-P8-E9L" firstAttribute="top" secondItem="rbL-gS-hr8" secondAttribute="bottom" constant="5" id="j9h-vz-Z6c"/>
+                        <constraint firstAttribute="bottom" secondItem="3N0-oh-iRz" secondAttribute="bottom" constant="50" id="wB5-1s-ZE1"/>
+                        <constraint firstItem="2uk-P8-E9L" firstAttribute="leading" secondItem="iIx-6U-iFb" secondAttribute="trailing" constant="5" id="ypH-6r-qll"/>
+                    </constraints>
                 </view>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SgX-nG-NXY">
+                    <rect key="frame" x="0.0" y="120" width="320" height="60"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="V2Q-q4-ju1"/>
+                    </constraints>
+                </scrollView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <point key="canvasLocation" x="360" y="244"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="Bs7-tf-YtH" secondAttribute="bottom" id="2ho-PD-JIi"/>
+                <constraint firstAttribute="trailing" secondItem="Bs7-tf-YtH" secondAttribute="trailing" id="3N4-dG-awB"/>
+                <constraint firstAttribute="trailing" secondItem="SgX-nG-NXY" secondAttribute="trailing" id="5tJ-rW-d20"/>
+                <constraint firstItem="SgX-nG-NXY" firstAttribute="top" secondItem="H5A-Ti-Rsi" secondAttribute="bottom" id="BhD-qC-CHv"/>
+                <constraint firstItem="SgX-nG-NXY" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="DiM-Rg-zg4"/>
+                <constraint firstItem="H5A-Ti-Rsi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Hmi-Eq-kdA"/>
+                <constraint firstItem="H5A-Ti-Rsi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Kwq-zq-YfZ"/>
+                <constraint firstItem="Bs7-tf-YtH" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="NgU-Xg-6Oq"/>
+                <constraint firstAttribute="trailing" secondItem="H5A-Ti-Rsi" secondAttribute="trailing" id="Puf-px-fMp"/>
+                <constraint firstItem="Bs7-tf-YtH" firstAttribute="top" secondItem="SgX-nG-NXY" secondAttribute="bottom" id="WkQ-hk-tOx"/>
+                <constraint firstAttribute="bottom" secondItem="Bs7-tf-YtH" secondAttribute="bottom" id="cBg-B4-ChM"/>
+                <constraint firstItem="Bs7-tf-YtH" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="jI9-KJ-xUu"/>
+                <constraint firstAttribute="trailing" secondItem="Bs7-tf-YtH" secondAttribute="trailing" id="qck-zu-7aX"/>
+                <constraint firstItem="H5A-Ti-Rsi" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="xES-Ao-KVL"/>
+                <constraint firstAttribute="trailing" secondItem="H5A-Ti-Rsi" secondAttribute="trailing" id="yIL-jW-wGc"/>
+            </constraints>
+            <point key="canvasLocation" x="362" y="274"/>
         </view>
     </objects>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
